# DiscordBotUTCS

./: .gitignore  Dockerfile  README.md  armor.json  bot.py  deco.json  download.py  fly.toml  global_var.py  petcat.db  pyproject.toml  requirements.txt  start.bat  static.py  submarine_incidents.json  test.md  test.py  zzz_news.json
cogs/: HPSH.py  MSutils.py  RSSfeeder.py  base.py  billsettle.py  calculator.py  colorChanger.py  data.json  event.py  linesticker.py  mGameRandom.py  mainCog.py  maplestory.py  mhwilds.py  music.py  nanoka.py  sbauction.py  scheduler.py  slash.py  weather.py  zevent.py
cogs/asset/: billsettle.db  color.db  color.db-journal  create-armor.sqlite3-query  create_deco.sqlite3-query  disp.db  mhwilds.db  weapon.sqlite3-query
cogs/asset/text/: maimai.json  test.py  topax.json  topax.txt
wildsdb/: item_json2db.py  items.json  items.py  weapon.json  weapon.py  weapon_json2db.py
